# Phoebe

./: .clang-format  .gitignore  CODE_OF_CONDUCT.md  LICENSE.md  README.md  meson.build  meson_options.txt
docs/: memory.md
docs/amd64/: arch.md  serials.md
docs/amd64/amd64/: gdt.md
kernel/: limine.c  logger.cpp  main.cpp  meson.build
kernel/arch/amd64/: arch.cpp  meson.build
kernel/arch/amd64/cpu/: cpu.cpp  features.cpp  fpu.cpp  gdt.S  gdt.cpp  idt.S  idt.cpp  ioapic.cpp  lapic.cpp  meson.build  paging.cpp  pic.cpp  smp.cpp
kernel/arch/amd64/drivers/: drivers.cpp  interrupts.cpp  meson.build
kernel/arch/amd64/drivers/timers/: apic.cpp  meson.build  pit.cpp
kernel/arch/amd64/drivers/uart/: meson.build  uart.cpp  uart_defs.h
kernel/arch/amd64/memory/: meson.build  paging.cpp
kernel/cpu/: meson.build  smp.cpp
kernel/drivers/: acpi.cpp  drivers.cpp  meson.build
kernel/glue/: meson.build
kernel/glue/libc/: assert.c  meson.build
kernel/glue/libstdc++/: hash.cpp  hashtable-aux.cpp  hashtable.cpp  meson.build
kernel/glue/uacpi/: event.cpp  interrupts.cpp  io.cpp  locks.cpp  log.cpp  memory.cpp  meson.build  rsdp.cpp  schedule.cpp  timer.cpp
kernel/include/: kernel.h  lock.hpp  logger.h  uacpi_libc.h
kernel/include/arch/amd64/: arch.hpp  mmu.hpp
kernel/include/arch/amd64/cpu/: arch_smp.hpp  cpu.hpp  features.h  fpu.hpp  gdt.hpp  idt.hpp  ioapic.hpp  lapic.hpp  pic.hpp  registers.h
kernel/include/arch/amd64/drivers/: apic_timer.hpp  pit.hpp  uart.hpp
kernel/include/arch/amd64/libs/: arch_asm.h
kernel/include/arch/amd64/memory/: paging.hpp
kernel/include/cpu/: paging.hpp  smp.hpp
kernel/include/drivers/: acpi.hpp  drivers.hpp  interrupts.hpp  timers.hpp
kernel/include/libs/: asm.h  bitmap.hpp  bvector.hpp  fixed_point.h  function.hpp  helpers.hpp  mmio.hpp  styling.h  trace.h  unordered_map.hpp  vector.hpp  vectors.hpp
kernel/include/memory/: heap.hpp  memory.hpp  physical.hpp  virtual.hpp
kernel/libs/: __cxa_atexit.c  malloc.cpp  meson.build  new.cpp  trace.c
kernel/memory/: buddy_alloc.cpp  buddy_alloc.h  heap.cpp  memory.cpp  meson.build  physical.cpp  virtual.cpp
libc/: ctype.c  meson.build
libc/include/: assert.h  ctype.h  errno.h  math.h  stdio.h  stdlib.h  string.h
libc/include/sys/: defs.h  file.h  flt-eval-method.h  types.h
libc/math/: floor.c  floorf.c  libm.h
libc/stdio/: fputs.c  meson.build  print.c  printf.c  putc.c  vprintf.c
libc/stdlib/: abort.c  abs.c  atou.c  div.c  meson.build  strtol.c  strtoll.c  strtoul.c  strtoull.c
libc/string/: memcmp.c  memcopy.c  memcopy.h  memcpy.c  memmove.c  memset.c  meson.build  strcat.c  strcmp.c  strcpy.c  strlen.c
meson/analysis/clang-tidy/: meson.build
meson/compiler/: meson.build
meson/compiler/c/: meson.build
meson/compiler/check-and-apply-flags/: meson.build
meson/compiler/cpp/: meson.build
meson/emulators/qemu/: meson.build
meson/format/: .clang-format  format.sh  meson.build
meson/linker/linker-map/: meson.build
meson/packaging/xorriso/: meson.build
scripts/: limine.conf  link-kernel.amd64.ld  make_version.sh
